fix anouncement overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -66,6 +66,7 @@ body{
         background-size: cover;
     }
     .announcement{
+        overflow: hidden;
         height: 37px;
         background-color:#dfd1b4;
         .rightToLeft{
